--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: April Mintac Pineda
 description: 'Opinionated but not biased posts about variety of things.'
 url: 'https://aprilmintacpineda.github.io'
 baseurl: '/blog'
-# google_analytics: 'UA-XXXXXX-X'
+google_analytics: 'UA-111722788-2'
 # disqus_shortname: 'your-disqus-name'
 
 author:
