new post;  updated favicon;

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: April Mintac Pineda
-description: 'Opinionated but not biased posts about variety of things.'
+description: 'Guides, tutorials, and enlightenment.'
 url: 'https://aprilmintacpineda.github.io'
 baseurl: '/blog'
 google_analytics: 'UA-111722788-2'
